# BetterOdooApiWrapper

./: .gitignore  README.md  pyproject.toml  wrapper.py
.github/workflows/: execute-tests.yml  pypi-publish.yaml
tests/: test_create.py  test_incorrect_leaf.py  test_setup.py
